# radiation-patterns

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
radiation/: model_radiation.py  patterns.py
tests/: test_patterns.py
